<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".add.AddDrugActivity">

    <EditText
        android:id="@+id/add_drug_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_drug_name_hint"
        android:inputType="textAutoComplete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_drug_half_life_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/half_life_new_drug_hint" />

        <EditText
            android:id="@+id/add_drug_half_life_unit_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/minutes_hours_days_hint" />

    </LinearLayout>


    <Button
        android:id="@+id/new_drug_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveNewDrug"
        android:text="@string/add_drug_save_button" />


</LinearLayout>