<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".edit.EditDrugActivity">

    <EditText
        android:id="@+id/edit_drug_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_drug_name_hint"
        android:enabled="false"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_drug_half_life_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/half_life_new_drug_hint"
            android:inputType="number" />

        <Spinner
            android:id="@+id/edit_drug_half_life_unit_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_drug_save"
        style="@style/add_drug_save_button"
        android:layout_marginTop="8dp"
        android:onClick="saveEditDrug"
        android:text="@string/edit_drug_save_button" />

</LinearLayout>