<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/half_life_input_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/half_life_label"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/half_life_label"
            app:layout_constraintBottom_toTopOf="@id/custom_halflife_checkbox"
            app:layout_constraintEnd_toStartOf="@id/drug_half_life_edittext"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/drug_half_life_edittext"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/input_for_the_half_life_description"
            android:ems="10"
            android:enabled="false"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            app:layout_constraintBaseline_toBaselineOf="@id/half_life_label"
            app:layout_constraintEnd_toStartOf="@id/halflife_unit"
            app:layout_constraintStart_toEndOf="@id/half_life_label"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/halflife_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/spinner_for_choosing_the_half_life_unit_description"
            app:layout_constraintBottom_toTopOf="@id/custom_halflife_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/drug_half_life_edittext"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="minutes" />

        <CheckBox
            android:id="@+id/custom_halflife_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drug_half_life_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_drug_textview_label"
            app:layout_constraintBaseline_toBaselineOf="@id/custom_halflife_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/custom_halflife_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>